--- a/Instructions/index.html
+++ b/Instructions/index.html
@@ -8,102 +8,124 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
-<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Latitude vs. X</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button><a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active"><a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
+    <div class="container-fluid"><br>
+      <div class="navbar-nav me-auto">
+        <a class="nav-link" href="#"><strong><h6>Latitude</h6></strong></a>
+      </div>
+      <ul class="navbar-nav ms-auto">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Dropdown
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+        </ul>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+      </div>
     </div>
   </nav>
 
   <div class="container">
-    <div class="jumbotron">
-      <h1 class="display-4">Summary: Latitude vs X!</h1>
-      <p class="lead">This is placed inside a container</p>
-      <hr class="my-4">
-      <p>Here we can display some more text!</p>
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-    </div>
+    <h1>Summary: Latitude vs X</h1>
+    <hr class="my-4">
   </div>
 
   <div class="container">
-    <h3 class="text-center">Thumbnails</h3>
     <div class="row">
-
-      <div class="col-md-8" style="background-color:red" ;>
-        <div class="thumbnail">
-          <img src="https://i.ytimg.com/vi/tntOCGkgt98/maxresdefault.jpg" alt="..." class="img-thumbnail">
-        </div>
-        <div class="caption">
-          <h3>Thumbnail label</h3>
-          <p>...</p>
-          <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default"
-              role="button">Button</a></p>
+      <div class="col-md-8" style="background-color:rgba(139, 156, 233, 0.432)" ;>
+        <div class="w3-container">
+          <p><br><img src="Resources/assets/images/Fig1.png" alt="Weather_plot1" class="img-fluid"
+              style="width:275px;height:275px; margin-right:15px; float: left">The purpose of this project was to
+            analyze how
+            weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the
+            OpenWeatherMap API to assemble a dataset on over 500 cities.
+            <br><br>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs.
+            latitude.
+            Factors we looked at included: temperatiure, cloudiness, wind speed, and humidity. This site provides the
+            source
+            data and visualizations created as part of the analysis, as well as explanations and descriptions of any
+            trends and
+            correlations witnessed.
+          </p>
         </div>
       </div>
-
-      <div class="col-md-4" style="background-color:blue" ;>
+      <div class="col-md-4" style="background-color:rgb(139, 156, 233, 0.432)" ;>
 
         <div class="row">
-          <div class="col-md-6" style="background-color:rgb(229, 255, 0)" ;>
+          <div class="col-md-6" style="background-color:rgb(139, 156, 233, 0.432)" ;>
+            <h5>visualizations</h5>
             <div class="thumbnail">
-              <img src="https://i.ytimg.com/vi/tntOCGkgt98/maxresdefault.jpg" alt="..." class="img-thumbnail">
+              <article>
+                <a target="_blank" href="Resources/assets/images/Fig1.png">
+                  <img src="Resources/assets/images/Fig1.png" alt="Cloudy Map" class="img-thumbnail">
+                </a>
+                <p><em>Cloudy Map</em></p>
+              </article>
             </div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aliquam velit magnam. Nam.
+            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
           </div>
-          <div class="col-md-6" style="background-color:rgb(229, 255, 0)" ;>
+          <div class="col-md-6" style="background-color:rgb(139, 156, 233, 0.432)" ;>
+            <h3><br> </h3>
             <div class="thumbnail">
-              <img src="https://i.ytimg.com/vi/tntOCGkgt98/maxresdefault.jpg" alt="..." class="img-thumbnail">
+              <article>
+                <a target="_blank" href="Resources/assets/images/Fig2.png">
+                  <img src="Resources/assets/images/Fig2.png" alt="Cloudy Map" class="img-thumbnail">
+                </a>
+                <p><em>Cloudy Map</em></p>
+              </article>
             </div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aliquam velit magnam. Nam.
+            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-md-6" style="background-color:rgb(229, 255, 0)" ;>
+          <div class="col-md-6" style="background-color:rgb(139, 156, 233, 0.432)" ;>
             <div class="thumbnail">
-              <img src="https://i.ytimg.com/vi/tntOCGkgt98/maxresdefault.jpg" alt="..." class="img-thumbnail">
+              <hr>
+              <article>
+                <a target="_blank" href="Resources/assets/images/Fig3.png">
+                  <img src="Resources/assets/images/Fig3.png" alt="Cloudy Map" class="img-thumbnail">
+                </a>
+                <p><em>Cloudy Map</em></p>
+              </article>
             </div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aliquam velit magnam. Nam.
+            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
           </div>
-          <div class="col-md-6" style="background-color:rgb(229, 255, 0)" ;>
+          <div class="col-md-6" style="background-color:rgb(139, 156, 233, 0.432)" ;>
             <div class="thumbnail">
-              <img src="https://i.ytimg.com/vi/tntOCGkgt98/maxresdefault.jpg" alt="..." class="img-thumbnail">
+              <hr>
+              <article>
+                <a target="_blank" href="Resources/assets/images/Fig4.png">
+                  <img src="Resources/assets/images/Fig4.png" alt="Cloudy Map" class="img-thumbnail">
+                </a>
+                <p><em>Cloudy Map</em></p>
+              </article>
             </div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aliquam velit magnam. Nam.
+            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
           </div>
         </div>
 
@@ -111,27 +133,9 @@
 
 
 
-    </div>
-
-  </div>
-
-  <div class="row">
-    <!--First and Only Column in this Row-->
-    <div class="col-md-12">
-      <h4>Using Bootstrap doesn't mean we're never writing CSS again.</h4>
-      <h4>But we can build websites much faster without having to write <strong><i>ALL</i></strong> of the CSS
-        ourselves.</h4>
-    </div>
-  </div>
-
-
-  </div>
-
-
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 </body>
 
