--- a/Instructions/viz_page_1.html
+++ b/Instructions/viz_page_1.html
@@ -59,12 +59,28 @@
     </div>
 
     <div class="container">
-        <h3 class="text-center">Thumbnails</h3>
+        <h3 class="w3_conatiner"></h3>
         <div class="row">
             <div class="col-md-4">
-                <div class="thumbnail">
-                    <img src="https://i.ytimg.com/vi/tntOCGkgt98/maxresdefault.jpg" alt="..." class="img-thumbnail">
+
+
+
+                <div class="w3-container">
+                    <h2>Responsive Image</h2>
+                    <p>An image can be set to automatically resize itself to fit the size of its container.</p>
+                    <p>All you have to do is set the image width to 100%:</p>
+                    <img src="img_lights.jpg" alt="Lights" style="width:100%">
+                    <p>Resize the browser window to see the effect.</p>
                 </div>
+
+
+
+
+
+
+
+
+
                 <div class="caption">
                     <h3>Thumbnail label</h3>
                     <p>...</p>
